/* 
  Localizable.strings
  RYLocalizer

  Created by Yury Radchenko on 25.11.16.
  Copyright © 2016 Yury Radchenko. All rights reserved.
*/


"Localizer" = "Localizer";

"Game" = "Game";

"Settings" = "Settings";
"Language" = "Language";
