...

import Foundation

fileprivate let kLanguageDictionary = [
    "en":"English",
    "cs":"Český",
    "de":"Deutsch",
    "ru":"Русский",
    "uk":"Українська"
]

fileprivate let kLanguageCodeDefault = "uk"
fileprivate let kLanguageChange = "localLanguageChange"
...
